Ajuste no index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Bem-vindo à página da nossa paróquia. Estamos aqui para servir a comunidade de Cotia com fé e dedicação.</p>
         
         <div class="chat-hint">
-            Precisa de informações? Clique no ícone de chat no canto inferior direito para conversar conosco.
+            << Precisa de informações? Clique no ícone dabaixo para conversar conosco. >></Precisa>
         </div>
         
         <footer>
